--- a/.github/workflows/t_master.yaml
+++ b/.github/workflows/t_master.yaml
@@ -14,18 +14,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Build and test Release
-        run: |
-          cd t
-          VERBOSE=1 cmake -S . -B b -DCMAKE_BUILD_TYPE=Release
-          VERBOSE=1 cmake --build b
-          cd b
-          VERBOSE=1 make test
       - name: Build and test Debug
         run: |
-          cd t
           VERBOSE=1 cmake -S . -B b -DCMAKE_BUILD_TYPE=Debug
           VERBOSE=1 cmake --build b
           cd b
           VERBOSE=1 make test
-
+      - name: Build Release
+        run: |
+          VERBOSE=1 cmake -S . -B r -DCMAKE_BUILD_TYPE=Release
+          VERBOSE=1 cmake --build r
