update; code coverage

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,5 +13,6 @@ target_include_directories(timer PUBLIC ${PROJECT_SOURCE_DIR}/cpp2)
 
 add_executable(timer_benchmark timer_benchmark.cpp)
 add_dependencies(timer_benchmark timer)
-target_link_libraries(timer_benchmark timer benchmark gmock gtest)
+target_link_libraries(timer_benchmark timer benchmark::benchmark)
+# target_link_libraries(timer_benchmark timer benchmark gmock gtest)
 add_test(NAME timer_benchmark COMMAND timer_benchmark)
